--- a/index.html
+++ b/index.html
@@ -1,1 +1,341 @@
-"Hello Word" 
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<title>Harris McCullers | GitHub portfolio page</title>
+
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+
+		<!-- <link rel="stylesheet" href="css/animate.css"> -->
+		<link rel="stylesheet" href="css/style.css">
+
+		<!-- Devicons -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
+
+		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!-- Leave those next 4 lines if you care about users using IE8 -->
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
+<!-- 		<script>
+
+		 if(location.hostname != "localhost") {
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-42920430-17', 'auto'); ga('send', 'pageview');
+		 } else {
+			console.log('dev mode detected, don\'t track view')
+		 }
+
+
+		</script> -->
+
+	<style>
+		html {
+			background-color: #fff;
+		}
+		body {
+		  background: url('https://i.imgur.com/tIm2o5z.png');
+		  background-attachment: fixed;
+		  background-repeat: no-repeat;
+		  background-size: cover;
+		  padding: 0 5vw;
+		  min-height: 100vh;
+		}
+
+		.nav-default {
+			background: white;
+
+		}
+
+		h1, h2, h3, h4, h5{
+			color:#4A4E69 !important;
+			font-weight: 300;
+			font-family: 'Open Sans', sans-serif;
+		}
+
+		p {
+			color: #4A4E69;
+			font-weight: 300;
+			font-family: 'Open Sans', sans-serif;
+		}
+
+		.main-container {
+			padding-top:50px;
+		}
+
+		.about-me h1 {
+			font-size:24px;
+		}
+
+		.about-me h2 {
+			font-size:20px;
+		}
+
+		.about-me h3 {
+			font-size:18px;
+		}
+
+		.bottom-cta {
+			background: white;
+			position: fixed;
+			width: 100%;
+			padding: 15px;
+			box-shadow: 0 0 2px 3px lightgrey;
+			left: 0;
+			z-index: 10000;
+			bottom: 0;
+		}
+
+		.cta-icon {
+			font-size:2em;
+			margin:5px;
+		}
+
+
+		.cta-icon:hover,
+		.cta-icon:focus {
+			text-decoration: none;
+		}
+
+		.profile-pic {
+			box-shadow: 0px 4px 6px 2px lightgrey;
+		  border-radius: 50%;
+		  max-width: 70%;
+		}
+
+		/*.m-t-1 {
+			margin-top:1em;
+		}
+
+		.p-t-1 {
+			padding-top:1em;
+		}*/
+
+
+		/*.about-me {
+			margin-top:25px;
+		}*/
+
+		.navbar-default {
+			background-color: #C9ADA7;
+			background: none;
+			border: none;
+			border-radius:0;
+		}
+
+		/*.row-footer {
+			background-color: lightgrey;
+			-webkit-clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
+			clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
+			padding: 65px 10px;
+		}*/
+
+		.work-item-row {
+			/*padding: 10% 0;*/
+			margin-bottom:100px;
+		}
+
+		.row-tools {
+		  padding: 50px 0;
+		}
+
+		/*.linkedin-btn {
+			width:140px;
+			box-shadow: 0px 2px 5px 1px lightgrey;
+			padding: 12px;
+			border-radius: 5px;
+		}*/
+
+		.btn-launch {
+			width:100%;
+			max-width:200px;
+			background-color: #549657;
+			color:white;
+			box-shadow: 0px 2px 5px 1px darkgrey;
+		}
+
+		.btn-launch:hover,
+		.btn-launch:focus {
+			color: white;
+			background: #3d7140;
+		}
+
+		.about-side {
+			position:fixed;
+		}
+
+		.project {
+			background: white;
+			border-radius:5px;
+			box-shadow: 0 0 2px 2px lightgrey;
+			padding: 30px;
+		}
+
+	</style>
+
+
+	</head>
+	<body>
+
+		<div class="container main-container">
+
+
+			<div class="row">
+
+				<!-- side content -->
+				<div class="col-sm-3 about-me about-side text-center hidden-xs">
+						<img src="https://avatars1.githubusercontent.com/u/740503?v&#x3D;4" width=200 class="profile-pic img-responsive center-block">
+						<h1>Harris McCullers</h1>
+						<h2>CA</h2>
+						<h3>A Pitzer College student studying Computer Science at Harvey Mudd. Currently learning C++, but already competent in Python, Java, and more.</h3>
+
+						<div class="text-center" style="margin:20px">
+							<!-- <a href="#" class="cta-icon"><i class="devicon-twitter-plain colored"></i></a> -->
+							<a href="#" class="cta-icon"><i class="devicon-github-plain colored"></i></a>
+						</div>
+				</div>
+
+				<div class="text-center about-me hidden-sm hidden-md hidden-lg">
+						<img src="https://avatars1.githubusercontent.com/u/740503?v&#x3D;4" width=200 class="profile-pic img-responsive center-block">
+						<h1>Harris McCullers</h1>
+						<h2>CA</h2>
+						<h3>A Pitzer College student studying Computer Science at Harvey Mudd. Currently learning C++, but already competent in Python, Java, and more.</h3>
+
+						<div class="text-center" style="margin:20px">
+							<a href="mailto:harrismccullers@gmail.com" class="" target="_blank">
+								harrismccullers@gmail.com
+							</a>
+						</div>
+				</div>
+
+				<div class="bottom-cta hidden-sm hidden-md hidden-lg text-center">
+					<div class="btn btn-success">Get in touch</div>
+				</div>
+
+
+				<!-- main content -->
+				<div class="col-sm-9 col-sm-offset-3">
+
+
+					<div class="row work-item-row">
+							<div class="col-sm-8 col-sm-offset-2 project">
+
+								<img src="https://raw.githubusercontent.com/harrismcc/SeamCarving/master/ExamplePhotos/OkinawaSeam.bmp" class="img-responsive">
+
+								<h2 class="text-center"><a href="html_url" target="blank">SeamCarving</a></h2>
+								<p></p>
+
+								<div class="row text-center">
+									<div class="col-xs-12">
+											<i class="devicon-java-plain-wordmark colored"></i>
+									</div>
+								</div>
+								<div class="row text-center" style="margin:20px;">
+										<a class="btn btn-launch" href="https://github.com/harrismcc/SeamCarving" target="blank">GitHub</a>
+								</div>
+							</div>
+					</div>
+					<div class="row work-item-row">
+							<div class="col-sm-8 col-sm-offset-2 project">
+
+
+								<h2 class="text-center"><a href="html_url" target="blank">SchellingModel</a></h2>
+								<p>My implementation of the schelling model (for machine learning and writing)</p>
+
+								<div class="row text-center">
+									<div class="col-xs-12">
+											<i class="devicon-python-plain-wordmark colored"></i>
+									</div>
+								</div>
+								<div class="row text-center" style="margin:20px;">
+										<a class="btn btn-launch" href="https://github.com/harrismcc/SchellingModel" target="blank">GitHub</a>
+								</div>
+							</div>
+					</div>
+					<div class="row work-item-row">
+							<div class="col-sm-8 col-sm-offset-2 project">
+
+
+								<h2 class="text-center"><a href="html_url" target="blank">Huffman-Compression</a></h2>
+								<p></p>
+
+								<div class="row text-center">
+									<div class="col-xs-12">
+											<i class="devicon-python-plain-wordmark colored"></i>
+									</div>
+								</div>
+								<div class="row text-center" style="margin:20px;">
+										<a class="btn btn-launch" href="https://github.com/harrismcc/Huffman-Compression" target="blank">GitHub</a>
+								</div>
+							</div>
+					</div>
+					<div class="row work-item-row">
+							<div class="col-sm-8 col-sm-offset-2 project">
+
+
+								<h2 class="text-center"><a href="html_url" target="blank">BST_SpellCheck</a></h2>
+								<p>An implementation of a spell checker using binary search trees (C++)</p>
+
+								<div class="row text-center">
+									<div class="col-xs-12">
+											<i class="devicon-cplusplus-plain-wordmark colored"></i>
+									</div>
+								</div>
+								<div class="row text-center" style="margin:20px;">
+										<a class="btn btn-launch" href="https://github.com/harrismcc/BST_SpellCheck" target="blank">GitHub</a>
+								</div>
+							</div>
+					</div>
+
+
+					<div class="row row-footer text-center">
+						<div class="col">
+							<div style="margin:50px;">
+								<h3 style="margin:50px 0 15px">I'm available for work, get in touch</h3>
+							</div>
+						</div>
+					</div>
+
+
+				</div> <!-- end main content -->
+
+
+
+			</div>
+
+
+
+
+
+		</div>
+
+
+		<!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+		<script
+	  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+	  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+	  crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+		<script>
+			$(document).scroll(function() {
+			  var y = $(this).scrollTop();
+			  if (y > 500) {
+			    $('.bottom-cta').slideDown();
+			  } else {
+			    $('.bottom-cta').slideUp();
+			  }
+			});
+		</script>
+
+	</body>
+</html>
