--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <div class="text-center" style="margin:20px">
                             <a class="btn btn-connect" href="https://github.com/harrismcc" target="blank">GitHub</a>
                             <p></p>
-                            <a class="btn btn-connect" href="https://github.com/harrismcc/BST_SpellCheck" target="blank">Resume</a>
+                            <a class="btn btn-connect" href="https://docs.google.com/document/d/12m9q9Bu8bnTKmiHRHx78kaBkjiwmxZm5BpR-fZRZy8s/edit?usp=sharing" target="blank">Resume</a>
 							
 						</div>
 				</div>
@@ -251,7 +251,7 @@
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://github.com/harrismcc/SeamCarving" target="blank">GitHub</a>
+										<a class="btn btn-launch" href="https://github.com/harrismcc/SeamCarving" target="blank">Go</a>
 								</div>
 							</div>
 					</div>
@@ -268,7 +268,7 @@
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://github.com/harrismcc/SchellingModel" target="blank">GitHub</a>
+										<a class="btn btn-launch" href="https://github.com/harrismcc/SchellingModel" target="blank">Go</a>
 								</div>
 							</div>
 					</div>
@@ -285,7 +285,7 @@
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://github.com/harrismcc/Huffman-Compression" target="blank">GitHub</a>
+										<a class="btn btn-launch" href="https://github.com/harrismcc/Huffman-Compression" target="blank">Go</a>
 								</div>
 							</div>
 					</div>
@@ -302,7 +302,7 @@
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://github.com/harrismcc/BST_SpellCheck" target="blank">GitHub</a>
+										<a class="btn btn-launch" href="https://github.com/harrismcc/BST_SpellCheck" target="blank">Go</a>
 								</div>
 							</div>
 					</div>
@@ -311,7 +311,7 @@
 					<div class="row row-footer text-center">
 						<div class="col">
 							<div style="margin:50px;">
-								<h3 style="margin:50px 0 15px">I'm available for work, get in touch</h3>
+								<h3> style="margin:50px 0 15px">I'm available for work, get in touch</h3>
 							</div>
 						</div>
 					</div>
