updated name and added new image for MarkovModel

--- a/index.html
+++ b/index.html
@@ -257,10 +257,11 @@
 					</div>
 					<div class="row work-item-row">
 							<div class="col-sm-8 col-sm-offset-2 project">
+								
+								<img src="https://i.imgur.com/VS1hfvS.png" class="img-responsive">
 
-
-								<h2 class="text-center"><a href="html_url" target="blank">SchellingModel</a></h2>
-								<p>My implementation of the schelling model (for machine learning and writing)</p>
+								<h2 class="text-center"><a href="html_url" target="blank"Markovodel</a></h2>
+								<p>My implementation of the Markov Model (for machine learning and writing)</p>
 
 								<div class="row text-center">
 									<div class="col-xs-12">
@@ -268,7 +269,7 @@
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://github.com/harrismcc/SchellingModel" target="blank">Go</a>
+										<a class="btn btn-launch" href="https://github.com/harrismcc/MarkovModel" target="blank">Go</a>
 								</div>
 							</div>
 					</div>
