--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 								
 								<img src="https://i.imgur.com/VS1hfvS.png" class="img-responsive">
 
-								<h2 class="text-center"><a href="html_url" target="blank"Markovodel</a></h2>
+								<h2 class="text-center"><a href="html_url" target="blank">Markovodel</a></h2>
 								<p>My implementation of the Markov Model (for machine learning and writing)</p>
 
 								<div class="row text-center">
