--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 						<img src="https://avatars1.githubusercontent.com/u/740503?v&#x3D;4" width=200 class="profile-pic img-responsive center-block">
 						<h1>Harris McCullers</h1>
 						<h2>CA</h2>
-						<h3>A Pitzer College student studying Computer Science at Harvey Mudd. Currently learning C++, but already competent in Python, Java, and more.</h3>
+						<h3>I'm a Pitzer College student studying Computer Science at Harvey Mudd College. As a talented coder, skilled communicator, and proven leader, I am a great addition to any team. </h3>
 
                         <div class="text-center" style="margin:20px">
                             <a class="btn btn-connect" href="https://github.com/harrismcc" target="blank">GitHub</a>
@@ -225,7 +225,7 @@
 						<img src="https://avatars1.githubusercontent.com/u/740503?v&#x3D;4" width=200 class="profile-pic img-responsive center-block">
 						<h1>Harris McCullers</h1>
 						<h2>CA</h2>
-						<h3>A Pitzer College student studying Computer Science at Harvey Mudd. Currently learning C++, but already competent in Python, Java, and more.
+						<h3>I'm a Pitzer College student studying Computer Science at Harvey Mudd College. As a talented coder, skilled communicator, and proven leader, I am a great addition to any team. 
             </h3>
 
 						<div class="text-center" style="margin:20px">
