testing new entry

--- a/index.html
+++ b/index.html
@@ -296,6 +296,24 @@
 					</div>
 					<div class="row work-item-row">
 							<div class="col-sm-8 col-sm-offset-2 project">
+								
+								<img src="https://raw.githubusercontent.com/harrismcc/badPi/master/exampleRun.gif">
+
+								<h2 class="text-center"><a href="html_url" target="blank">Markov Model</a></h2>
+								<p>My implementation of the Markov Model (for machine learning and writing)</p>
+
+								<div class="row text-center">
+									<div class="col-xs-12">
+											<i class="devicon-python-plain-wordmark colored"></i>
+									</div>
+								</div>
+								<div class="row text-center" style="margin:20px;">
+										<a class="btn btn-launch" href="https://github.com/harrismcc/MarkovModel" target="blank">Go</a>
+								</div>
+							</div>
+					</div>
+					<div class="row work-item-row">
+							<div class="col-sm-8 col-sm-offset-2 project">
 
                                 <img src="https://i.imgur.com/9r2fSVt.png" class="img-responsive">
 								<h2 class="text-center"><a href="html_url" target="blank">BST_SpellCheck</a></h2>
