--- a/grutoring/index.html
+++ b/grutoring/index.html
@@ -8,8 +8,22 @@
             
         <title>Harris McCullers | Grutoring Info Page</title>
     </head>
+    <style>
+            html {
+                background-color: #fff;
+            }
+            body {
+              background: url('https://i.imgur.com/tIm2o5z.png');
+              background-attachment: fixed;
+              background-repeat: no-repeat;
+              background-size: cover;
+              padding: 0 5vw;
+              min-height: 100vh;
+            }
 
+    </style>
     <body>
+        <h2 align="right">Course Code: MEJ3JK</h2>
         <h1>
             Index:
         </h1>
@@ -27,7 +41,7 @@
                 <li>There will be two boxes with text. In the one labeled: System Variables
                     click on the item called "Path" (Note: This is different than PATH)
                 </li>
-                <li>Click "edit" and in the window that popps up click "add"</li>
+                <li>Click "edit" and in the window that pops up click "add"</li>
                 <li>In the text field, enter "C//Users//Username//Anaconda3//Scripts" Where "Username" is
                     replaced with your username
                 </li>
