added amazing retro gifs

--- a/grutoring/index.html
+++ b/grutoring/index.html
@@ -24,6 +24,7 @@
     </style>
     <body>
         <h2 align="right">Course Code: MEJ3JK</h2>
+        <IMG SRC="https://web.archive.org/web/20090901234808im_/http://www.geocities.com/rabid_python/consbar.gif">
         <h1>
             Index:
         </h1>
@@ -33,7 +34,7 @@
         </ol>
         <div id="anaconda_path">
             <h2>
-                Setting up Anaconda in PATH (Windows)
+                Setting up Anaconda in PATH (Windows) <IMG SRC=https://web.archive.org/web/20090902165139im_/http://geocities.com/japancomputerscience/ani-new02.gif>
             </h2>
             <ol>
                 <li>Use the search bar to open "View Advanced System Settings"</li>
@@ -48,6 +49,8 @@
                 <li>Finally, click ok on all open windows and restart VSCode and/or CMD (if open)</li>
             </ol>
         
+
+            <IMG SRC=https://web.archive.org/web/20091026232201im_/http://www.geocities.com/the_last_muvafuka_breathin/tux_linux_md_wht.gif>
         </div>
     </body>
 </html>
