added some more gifs

--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@
 								
 								<img src="https://raw.githubusercontent.com/harrismcc/badPi/master/exampleRun.gif">
 
-								<h2 class="text-center"><a href="html_url" target="blank">Bad Pi</a></h2>
+								<h2 class="text-center"><a href="html_url" target="blank">Bad Pi</a>
+									<IMG SRC=https://web.archive.org/web/20090902165139im_/http://geocities.com/japancomputerscience/ani-new02.gif></h2>
 								<p>In it's essence, Bad Pi calculates digits of pi. However, it does so in an 
                                     a strange way. By colliding two opjects together in a 2D physics enviornment 
                                     and counting the number of collisions, pi can be calculated!
