Updated resume link

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <div class="text-center" style="margin:20px">
                             <a class="btn btn-connect" href="https://github.com/harrismcc" target="blank">GitHub</a>
                             <p></p>
-                            <a class="btn btn-connect" href="https://docs.google.com/document/d/12m9q9Bu8bnTKmiHRHx78kaBkjiwmxZm5BpR-fZRZy8s/edit?usp=sharing" target="blank">Resume</a>
+                            <a class="btn btn-connect" href="https://harrismcc.github.io/personal/resume.pdf" target="blank">Resume</a>
 			    <p></p>			
 						</div>
 				</div>
