added employment section with ML, updated resume link

--- a/index.html
+++ b/index.html
@@ -158,10 +158,21 @@
 			color: white;
 			background: #01AD8B;
 		}
+		.strong_head {
+			font-size:40px;
+			padding: 30px;
+			
+		}
 		.about-side {
 			position:fixed;
 		}
 		.project {
+			background: white;
+			border-radius:5px;
+			box-shadow: 0 0 2px 2px lightgrey;
+			padding: 30px;
+		}
+		.employer {
 			background: white;
 			border-radius:5px;
 			box-shadow: 0 0 2px 2px lightgrey;
@@ -195,7 +206,7 @@
                         <div class="text-center" style="margin:20px">
                             <a class="btn btn-connect" href="https://github.com/harrismcc" target="blank">GitHub</a>
                             <p></p>
-                            <a class="btn btn-connect" href="https://docs.google.com/document/d/12m9q9Bu8bnTKmiHRHx78kaBkjiwmxZm5BpR-fZRZy8s/edit?usp=sharing" target="blank">Resume</a>
+                            <a class="btn btn-connect" href="https://harrismcc.github.io/personal/resume.pdf" target="blank">Resume</a>
 			    <p></p>			
 						</div>
 				</div>
@@ -218,6 +229,22 @@
 				<!-- main content -->
 				<div class="col-sm-9 col-sm-offset-3">
 
+						<strong class="strong_head text-center col-sm-8 col-sm-offset-2">Employment</strong>
+
+					<div class="row work-item-row">
+						<div class="col-sm-8 col-sm-offset-2 employer">
+							
+							<a href="https://www.magiclinks.com/"><img src="https://www.magiclinks.com/assets/logotype-lg-3bf7e827733b0fe24d629ddd306b9cf0cf2d1ffcccbb61fbd6a4489b24f2cfc8.png" class="center"></a>
+							
+															<h3 class="text-center"May>Project & Product Management Intern</h3>
+															<p class="text-center"May>May 2019 - Present</p>
+															<p>Born in 2014, MagicLinks is the fastest-growing video influencer platform, powering social commerce for tens of thousands of the world's leading digital artists on YouTube, Instagram and all other social platforms. MagicLinks technology turns moments of inspiration into shopping experiences at nearly every one of the worlds most recognized retailers and brands.</p>
+							<p></p>
+
+						</div>
+				</div>
+
+					<strong class="strong_head text-center col-sm-8 col-sm-offset-2">Projects</strong>
 
 					<div class="row work-item-row">
 							<div class="col-sm-8 col-sm-offset-2 project">
