--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 			background-color: #fff;
 		}
 		body {
-		  background: url('https://i.imgur.com/tIm2o5z.png');
+		  /*background: url('https://i.imgur.com/tIm2o5z.png');*/
+			background: url('https://images.unsplash.com/photo-1475965894430-b05c9d13568a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80');
 		  background-attachment: fixed;
 		  background-repeat: no-repeat;
 		  background-size: cover;
