--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
 			background-color: #fff;
 		}
 		body {
-		  /*background: url('https://i.imgur.com/tIm2o5z.png');*/
-			background: url('https://images.unsplash.com/photo-1475965894430-b05c9d13568a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80');
-		  background-attachment: fixed;
-		  background-repeat: no-repeat;
+		  background: url('https://i.imgur.com/tIm2o5z.png');
+			background-repeat:repeat;
 		  background-size: cover;
 		  padding: 0 5vw;
 		  min-height: 100vh;
