added link to my server

--- a/personal/index.html
+++ b/personal/index.html
@@ -23,7 +23,7 @@
 
     </style>
     <body>
-
+        <a href="http://76.94.185.244/">My Raspberry Pi Server</a>
         <a href="file:///C:/Users/Harris%20McCullers/Desktop/harrismcc.github.io/personal/index.html">Back to home</a>
     </body>
 </html>
