--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 		}
 		.about-me h3 {
 			font-size:18px;
+
+   		width: 90%;
 		}
 		.bottom-cta {
 			background: white;
@@ -238,7 +240,7 @@
                             <a class="btn btn-outline" href="https://github.com/harrismcc" target="blank">GitHub</a>
 														
 														
-                            <a class="btn btn-outline" href="https://harrismcc.github.io/personal/resume.pdf" target="blank">Resume</a>
+                            <a class="btn btn-outline" href="https://harrismcc.github.io/personal/resume_public.pdf" target="blank">Resume</a>
 			    <p></p>			
 						</div>
 				</div>
