--- a/index.html
+++ b/index.html
@@ -45,177 +45,7 @@
 		 }
 		</script> -->
 
-	<style>
-		html {
-			background-color: #fff;
-		}
-		body {
-		  background: url('https://i.imgur.com/tIm2o5z.png');
-			background-repeat:repeat;
-		  background-size: cover;
-		  padding: 0 5vw;
-		  min-height: 100vh;
-		}
-		.nav-default {
-			background: white;
-		}
-		h1, h2, h3, h4, h5{
-			color:#4A4E69 !important;
-			font-weight: 300;
-			font-family: 'Open Sans', sans-serif;
-			
- 
-			
-		}
-		p {
-			color: #4A4E69;
-			font-weight: 300;
-			font-family: 'Open Sans', sans-serif;
-			font-size: 15px;
-			text-align: justify;
-  		text-justify: inter-word;
-		}
-		.main-container {
-			padding-top:50px;
-		}
-		.about-me h1 {
-			font-size:30px;
-		}
-		.about-me h2 {
-			font-size:20px;
-		}
-		.about-me h3 {
-			font-size:18px;
-
-   		width: 90%;
-		}
-		.bottom-cta {
-			background: white;
-			position: fixed;
-			width: 100%;
-			padding: 15px;
-			box-shadow: 0 0 2px 3px lightgrey;
-			left: 0;
-			z-index: 10000;
-			bottom: 0;
-		}
-		.cta-icon {
-			font-size:2em;
-			margin:5px;
-		}
-		.cta-icon:hover,
-		.cta-icon:focus {
-			text-decoration: none;
-		}
-		.profile-pic {
-			box-shadow: 0px 4px 6px 2px lightgrey;
-		  border-radius: 50%;
-		  max-width: 70%;
-		}
-		/*.m-t-1 {
-			margin-top:1em;
-		}
-		.p-t-1 {
-			padding-top:1em;
-		}*/
-		/*.about-me {
-			margin-top:25px;
-		}*/
-		.navbar-default {
-			background-color: #C9ADA7;
-			background: none;
-			border: none;
-			border-radius:0;
-		}
-		/*.row-footer {
-			background-color: lightgrey;
-			-webkit-clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
-			clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
-			padding: 65px 10px;
-		}*/
-		.work-item-row {
-			/*padding: 10% 0;*/
-			margin-bottom:100px;
-		}
-		.row-tools {
-		  padding: 50px 0;
-		}
-		/*.linkedin-btn {
-			width:140px;
-			box-shadow: 0px 2px 5px 1px lightgrey;
-			padding: 12px;
-			border-radius: 5px;
-		}*/
-		.btn-launch {
-			width:100%;
-			max-width:200px;
-			background-color: #03CEA4;
-			color:white;
-			box-shadow: 0px 2px 5px 1px darkgrey;
-		}
-    .btn-connect {
-      width:100%;
-			max-width:200px;
-			background-color: #39A0ED;
-			color:white;
-			box-shadow: 0px 2px 5px 1px darkgrey;
-			font-weight: 800;
-			font-family: 'Open Sans', sans-serif;
-    }
-		.btn-launch:hover,
-		.btn-launch:focus {
-			color: white;
-			background: #01AD8B;
-		}
-		.strong_head {
-			font-size:40px;
-			padding: 20px;
-			
-		}
-		.about-side {
-			position:fixed;
-		}
-		.project {
-			background: white;
-			border-radius:5px;
-			box-shadow: 0 0 2px 2px lightgrey;
-			padding: 30px;
-		}
-		.employer {
-			background: white;
-			border-radius:5px;
-			box-shadow: 0 0 2px 2px lightgrey;
-			padding: 30px;
-		}
-		.btn-outline{
-			font-size: 15px;
-			color: #000;
-			background-color: transparent;
-			border: 1px solid #000;
-			padding: 10px;
-			margin-left: 5px;
-			margin-right: 5px;
-			margin-top: 5px;
-			margin-top: 5px;
-		}
-	
-    .center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 75%;
-    }
-		hr {
-    display: block;
-    height: 2px;
-    border: 10px;
-    border-top: 1px solid #ccc;
-    margin: 1em auto;
-    padding: 10px;
-		width: 70%;
-}
-	
-	</style>
+		<link href="StyleSheet.css" rel="stylesheet" type="text/css">
 
 
 	</head>
@@ -424,7 +254,7 @@
 					<div class="row row-footer text-center">
 						<div class="col">
 							<div style="margin:50px;">
-								<h3 style="margin:50px 0 15px"> I'm available for work, <a href="mailto:harrismccullers@gmail.com" class="" target="_blank">
+								<h3 style="margin:50px 0 15px"> I'm available for work, <a href="http://harrismcc.github.io/contact.html" class="" target="_blank">
                   get in touch!
                 </a></h3>
 							</div>
