Added new css and contact page with google form

--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,26 @@
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
         <link href="StyleSheet.css" rel="stylesheet" type="text/css">
 
+        <style>
+        .google-form iframe{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 75%;
+        }
+        .google-form{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 75%;
+        }
+
+        </style>
+
+
     </head>
 
     <body>
-
+            
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf27xGqUaG2-FEHlGxddi44VbJYGUqJUur-KtjzSDeguP4zmg/viewform?embedded=true" class = "google-form" width="640" height="1196" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </body>
