--- a/contact.html
+++ b/contact.html
@@ -44,4 +44,38 @@
     <body>
             
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf27xGqUaG2-FEHlGxddi44VbJYGUqJUur-KtjzSDeguP4zmg/viewform?embedded=true" class = "google-form" width="640" height="1196" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            <h1 class="center">PGP</h1>
+            <h3 class="center">If you want to contact me in a more secure format, use PGP to encrypt you message in the above form</h3>
+            <textarea class="center" style="height: 300px; width: 700px;">
+                -----BEGIN PGP PUBLIC KEY BLOCK-----
+
+                mQENBFz9W7ABCADHrfBY4X/ujU7ICCtZtq4STijar5qOZTgj5FI3WL37N9AMLbYN
+                l3S4UoRnjFfJ+nEled4avwMpKdGxI0ZhPzrohmmQizAI7EXUHNhFdF62Tu/hOh8m
+                fkL6y2TqNeQMuJ/WQ1gHcicW1V99zme2gRGwUPGDhCuoAjnKHd+gyO0KLT/dvcY5
+                kWuv1Hc8nR22vdKOjpzXotitilgoaaSLj5WgwyVd3Ree+xhKiDNkQPRz+pM1Got0
+                XU/qelLFI6pXzE24HO3JJe0Go8tfxV269+rHqJK7m0NNrVIloiVB4f2aO6oozk0g
+                aRqORG+tVdGKWf4JSHwDKRRm3qKx9gOktDu5ABEBAAG0BkhhcnJpc4kBVAQTAQgA
+                PhYhBJfbMIcbXnoahwN8m72s9UmxJdKCBQJc/VuwAhsDBQkDw7QABQsJCAcCBhUK
+                CQgLAgQWAgMBAh4BAheAAAoJEL2s9UmxJdKCNNIH/2dy8MzKxS1vCn4EPl7GUAC7
+                IDmJcvMJODfd6i02meVnqfnB7JquIQ2XJBOmONvJyZUzcaH1qYwVidMGj5CevMYw
+                lSvIacJI025dwuhsCUeX9BCxg/mlG7izJ0x/Nid487v1cCxPeJHzz2yKcnUhQD0w
+                CaR5lVUc5nMcxbQ03Eik15FsFVjv32unvINxFx9XQZAGJ2Sga+uU8e6a2yM2KBe5
+                DWvKSsW+I2G3hxj150Um2aQ1q+9qBL/jpOpQeCVK5DzIxM3bMN3BBUl+wQRCwXM0
+                UQdyFyA+wCrogG7ryJ2To/KnJNImzyPaXTjC+YF1AuvFaVuTv0CuJj+t84mXgHW5
+                AQ0EXP1bsAEIALCOJiDAaJbZMXfcpjTVSrAI2ni19G5Vhkr29rOO/AlYDtR09AQs
+                C89lCqbV4ND9P09d5T8yJOb5pglcC1yLTSYyodlBf0MS0FMgCIzUVjUzKcnL0+28
+                N8kEoiUIvBHagyVMWeTv1Z4heG1nZs44SWbTu4VP8hAT/Y1jy01F5YVNrn8edPdS
+                heMzmdagySBcOczHcD+AwVXZuinhgRD3pFl+pC4y3a8OFtRvAIZSJZD0KHkkMHz0
+                fs3Y0xVvINhvxKg6cYKEOxVhpIyTszE8DPFNzNDYEh2hVMpYlDe0E1Y4dHTGH+SD
+                QA/3wVMvHkpO3ci412ZQWIvVkAWp3ZQoTwsAEQEAAYkBPAQYAQgAJhYhBJfbMIcb
+                XnoahwN8m72s9UmxJdKCBQJc/VuwAhsMBQkDw7QAAAoJEL2s9UmxJdKCIjEH/3w6
+                NV5dsssV4bkz8A8CwDOfL2Zwtk6APtOTJwDGl1qNrsekaxYT9lV/YX3JVmjkhLgM
+                uPg/469qaizgI0A6NZ9Eta7fD2EyJcKCl0PR3nUypZ3x1Gbowsf7ad8e7xXNGNiH
+                frejlNS6nlx9G/GsSbOCueClNCQXn7FNvIOrVYlcgRe6275wukPK4tf9DbcRazQn
+                n9S3LcvYIQoH64YWbNBJ5h9sSfh7wXiq79fKhxk+/2vgxN2dtayMthnBuXfFKzzW
+                MlsT1Gsf5vISUNFnKWPwhNkz0C0dFylW+i0fIejB6ZXW2ZBcD7DjlQenikthwYmq
+                94YcfbvJEaTBasf6rzA=
+                =kAAe
+                -----END PGP PUBLIC KEY BLOCK-----
+            </textarea>
     </body>
