--- a/index.html
+++ b/index.html
@@ -117,6 +117,18 @@
 
 						</div>
 				</div>
+				<div class="row work-item-row">
+					<div class="col-sm-8 col-sm-offset-2 employer">
+						
+						<a href="https://bccymca.org/"><img src="https://i.pinimg.com/originals/c6/e6/d7/c6e6d7bd36ea5c0e40918e90d54c89c6.png" class="center" style="height:100px;width:55%;"></a>
+						
+														<h3 class="text-center"May>Head Counselor</h3>
+														<p class="text-center"May>June 2016 - August 2018 (Seasonal) </p>
+														<p>Camp Becket is a rustic camp for boys located in Becket Mass. In this role, I counseled in a heavily team-oriented environment to teach kids interpersonal and outdoors skills, as well as coordinated communication between camp and families with phone calls, emails, and in-person meetings. Furthermore, I mentored as a “senior staff” member to train younger staff and CIT’s and designed and ran activities - supervising over 80 kids and leading upwards of 20 staff members.</p>
+															<p></p>
+
+					</div>
+			</div>
 				<hr/>
 					<strong class="strong_head text-center col-sm-8 col-sm-offset-2 hidden-xs">Projects</strong>
 					<strong class="strong_head text-center col-sm-8 col-sm-offset-2 center hidden-sm hidden-md hidden-lg">Projects</strong>
