added SEO meta desc

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Harris McCullers' Portfolio and Personal Website. Harris McCullers is a Pitzer College student studying Computer Science at Harvey Mudd College. A talented coder, skilled communicator, and proven leader, Harris McCullers is a great addition to any team.">
 
 		<title>Harris McCullers | GitHub portfolio page</title>
 
