added google identification to meta

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf27xGqUaG2-FEHlGxddi44VbJYGUqJUur-KtjzSDeguP4zmg/viewform?embedded=true" class = "google-form" width="640" height="1196" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             <h1 class="center">PGP</h1>
             <h3 class="center">If you want to contact me in a more secure format, use PGP to encrypt you message in the above form</h3>
-            <textarea class="center" style="height: 300px; width: 700px;">
+            <textarea class="center" style="height: 300px; width: 700px;" readonly>
                 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
                 mQENBFz9W7ABCADHrfBY4X/ujU7ICCtZtq4STijar5qOZTgj5FI3WL37N9AMLbYN
