--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="google-site-verification" content="4U2rf8rfniaWR0hYcW7uqcByQ5w7Gg5hpZb1Vg3ZHl4" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="title" content="Harris McCullers Portfolio">
 		<meta name="description" content="Harris McCullers' Portfolio and Personal Website. Harris McCullers is a Pitzer College student studying Computer Science at Harvey Mudd College. A talented coder, skilled communicator, and proven leader, Harris McCullers is a great addition to any team.">
@@ -281,7 +282,7 @@
 						<div class="col">
 							<div style="margin:50px;">
 								<h3 style="margin:50px 0 15px"> I'm available for work, <a href="http://harrismcc.github.io/contact.html" class="" target="_blank">
-                  Contact Harris McCullers
+                  Contact Harris
                 </a></h3>
 							</div>
 						</div>
