changed julia set link
to https://im.ezgif.com/tmp/ezgif-1-2094cd063022.gif

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<div class="row work-item-row">
 							<div class="col-sm-8 col-sm-offset-2 project">
 								
-								<img src="https://raw.githubusercontent.com/harrismcc/Visualize_Julia_Sets/master/Animation1/JuliaSetThree.gif" alt="Harris McCullers" width="100%" height="100%">
+								<img src="https://im.ezgif.com/tmp/ezgif-1-2094cd063022.gif" alt="Harris McCullers" width="100%" height="100%">
 	
 								<h2 class="text-center"><a target="blank">Visualize Julia Sets</a>
 									<IMG SRC=https://web.archive.org/web/20090902165139im_/http://geocities.com/japancomputerscience/ani-new02.gif></h2>
