removed dead links and added new resume pdf

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						
 
 														<a class="btn btn-outline" href="https://github.com/harrismcc" target="blank">GitHub</a>
-														<a class="btn btn-outline" href="https://harrismcc.github.io/personal/resume.pdf" target="blank">Resume</a>
+														<a class="btn btn-outline" href="https://harrismcc.github.io/personal/resume_public.pdf" target="blank">Resume</a>
 														<a class="btn btn-outline" href="https://harrismcc.github.io/contact.html" target="blank">Contact</a>
 														<p></p>
 				</div>
