changed resume link to github raw direct link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="text-center" style="margin:20px">
 														<a class="btn btn-outline" href="https://github.com/harrismcc" target="blank">GitHub</a>
 														
-														<a class="btn btn-outline" href="https://harrismcc.github.io/personal/resume_public.pdf" target="blank">Resume</a>
+														<a class="btn btn-outline" href="https://raw.githubusercontent.com/harrismcc/harrismcc.github.io/b2186eb69b2c7722bf984356e90c933cff1644a0/personal/resume_public.pdf" target="blank">Resume</a>
 														<br/>
 														<a class="btn btn-outline" href="https://harrismcc.github.io/contact.html" target="blank">Contact</a>
 														<p></p>
@@ -94,7 +94,7 @@
 						
 
 														<a class="btn btn-outline" href="https://github.com/harrismcc" target="blank">GitHub</a>
-														<a class="btn btn-outline" href="https://harrismcc.github.io/personal/resume_public.pdf" target="blank">Resume</a>
+														<a class="btn btn-outline" href="https://raw.githubusercontent.com/harrismcc/harrismcc.github.io/b2186eb69b2c7722bf984356e90c933cff1644a0/personal/resume_public.pdf" target="blank">Resume</a>
 														<a class="btn btn-outline" href="https://harrismcc.github.io/contact.html" target="blank">Contact</a>
 														<p></p>
 				</div>
