--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							
 															<h3 class="text-center"May>Project & Product Management Intern</h3>
 															<p class="text-center"May>May 2019 - Present</p>
-															<p>Born in 2014, MagicLinks is the fastest-growing video influencer platform, powering social commerce for tens of thousands of the world's leading digital artists on YouTube, Instagram and all other social platforms. MagicLinks technology turns moments of inspiration into shopping experiences at nearly every one of the worlds most recognized retailers and brands.</p>
+															<p>Born in 2014, MagicLinks is the fastest-growing video influencer platform, powering social commerce for tens of thousands of the world's leading digital artists. In this role, I contributed to over 50 internal projects and led 10 through from beginning to end. Additionally, I took place in monthly meetings with the CEO and team leads to determine what new tech projects the company would pursue in the coming month where I helped to contribute ideas and concerns. Lastly, I helped oversee a team of developers, participating in daily team status calls and solo-leading over 30 of them. For an example of one of my projects, check out this revenue calculator on the front page: <a href='https://www.magiclinks.com/#revenue-calculator'>here</a></p>
 							<p></p>
 
 						</div>
