--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
   	gtag('config', 'UA-135754439-1');
 	</script>
+		
+	<script async src="//
+	pagead2.googlesyndication.­com/
+	pagead/js/adsbygoogle.js"></script>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({
+	google_ad_client: "pub-4765360187085538",
+	enable_page_level_ads: true
+	});
+	</script>
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
