--- a/personal/index.html
+++ b/personal/index.html
@@ -25,6 +25,9 @@
     <body>
         <a href="http://76.94.185.244/">My Raspberry Pi Server</a>
         <a href="file:///C:/Users/Harris%20McCullers/Desktop/harrismcc.github.io/personal/index.html">Back to home</a>
+        <h1>Hadfield Media Server Status</h1>
+        <h3>I am moving today, which means server hardware had to be unplugged. I'm sorry for the inconvience and everything should
+        be back online soon!</h3>
     </body>
 </html>
 
