Updated ML Image

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					<div class="row work-item-row">
 							<div class="col-sm-8 col-sm-offset-2 project">
 								
-								<img src="https://harrismcc.github.io/" alt="Harris McCullers" class="center">
+								<img src="https://i.imgur.com/J6AHR3t.png" alt="Harris McCullers" class="center">
 								
                                 <h2 class="text-center"><a target="blank">Prediction Widget</a></h2>
                                 				<p>I worked on this project as part of my internship at MagicLinks. The idea was to have a way for potential users (and current ones) to be able to predict how much income
