--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 								
                                 <h2 class="text-center"><a target="blank">Prediction Widget</a></h2>
                                 				<p>I worked on this project as part of my internship at MagicLinks. The idea was to have a way for potential users (and current ones) to be able to predict how much income
-								they could be making on the platform. I was in charge of the project from coneception to completion, working both as the project and project manager.</p>
+								they could be making on the platform. I was in charge of the project from conception to completion, working both as the project and project manager.</p>
 								<ul>
 									<li><p>Deployed to an audience of 40,000 active users and even more potential users.</p></li>
 									<li><p> Acted as both lead PDM and PJM to ideate new project idea with CEO and team leads, then executed on those ideas with a team of 5 developers</p></li>
