Changed Project to Product

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="col-sm-3 about-me about-side text-center hidden-xs" >
 						<img src="https://avatars1.githubusercontent.com/u/740503?v&#x3D;4" alt="Harris McCullers" width=200 class="profile-pic img-responsive center-block">
 						<h1>Harris McCullers</h1>
-						<p class="center" style="text-align: center;">Development - Project Management</p>
+						<p class="center" style="text-align: center;">Development - Product Management</p>
 						<h2>CA</h2>
 						
 							<h3 class="center">Harris McCullers is a Pitzer College student studying Computer Science at Harvey Mudd College. A talented coder, skilled communicator, and proven leader, Harris is a great addition to any team.</h3>
