--- a/harrishairproject/index.html
+++ b/harrishairproject/index.html
@@ -3,6 +3,30 @@
 
     </head>
     <body>
-        <iframe width="1120" height="630" src="https://www.youtube.com/embed/r-ton_iXXKY?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="pointer-events:none">
+            <iframe id="myvideo" width="1120" height="630" src="https://www.youtube.com/embed/r-ton_iXXKY?controls=0&autoplay=1 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <script>
+
+            var videoArray = Array("r-ton_iXXKY", "cBg2d2yJVrY", "ZlBHjuv__4I", "xQPDjtr_XTE","Rm8v-p2AG0g")
+            var prefix = "https://www.youtube.com/embed/"
+            var suffix = "?controls=0&autoplay=1&rel=0&amp;fs=0&amp;showinfo=0"
+
+            var item = videoArray[Math.floor(Math.random()*videoArray.length)];
+
+            console.log(prefix + item + suffix)
+            document.getElementById("myvideo").src = prefix + item + suffix;
+
+            
+
+            //set correct size
+            var height = window.innerHeight;
+            var width = window.innerWidth;
+
+            //assign size to window
+            document.getElementById("myvideo").width = width;
+            document.getElementById("myvideo").height = height;
+        </script>
+        
     </body>
 </html>
