--- a/harrishairproject/index.html
+++ b/harrishairproject/index.html
@@ -1,9 +1,29 @@
+
 <html>
     <head>
+        <style>
+            body {
+                background-color: black ;
+                margin-top : 0px;
+                margin-right: 0px;
+                margin-bottom: 0px;
+                margin-left: 0px;
+              }
+        </style>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135754439-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'UA-135754439-1');
+        </script>
+
+        <Title>Harris Hair Project</Title>
     </head>
     <body>
-        <div class="pointer-events:none">
+        <div style="background: black">
             <iframe id="myvideo" width="1120" height="630" src="https://www.youtube.com/embed/r-ton_iXXKY?controls=0&autoplay=1 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <script>
