--- a/harrishairproject/index.html
+++ b/harrishairproject/index.html
@@ -31,7 +31,9 @@
 
     <body>
         <div style="background: black">
+
             <img id="tv-image" class="tv" src="tv1.png"></img>
+
             <iframe id="myvideo" width="1120" height="630" src="https://www.youtube.com/embed/r-ton_iXXKY?controls=0&autoplay=1 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <script>
@@ -48,6 +50,11 @@
             //set correct size
             var height = window.innerHeight;
             var width = window.innerWidth;
+
+            //prevent over-stretching on mobile
+            if (height > (width * 2)){
+                height = height/2;
+            }
 
             //assign size to window
 
