--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<a href="https://www.magiclinks.com/"><img src="https://www.magiclinks.com/assets/logotype-lg-3bf7e827733b0fe24d629ddd306b9cf0cf2d1ffcccbb61fbd6a4489b24f2cfc8.png" alt="Harris McCullers" class="center"></a>
 							
 															<h3 class="text-center"May>Project & Product Management Intern</h3>
-															<p class="text-center"May>May 2019 - Present</p>
+															<p class="text-center"May>May 2019 - September 2019</p>
 															<p>Born in 2014, MagicLinks is the fastest-growing video influencer platform, powering social commerce for tens of thousands of the world's leading digital artists. Working as a Product and Project Manger I:</p>
 																<ul>
     																<li><p>Contributed to over 50 internal projects and led 10 through from beginning to end.</li> 
